Change nav bar background color and make the text h4 on all active pages. Replace certs.html's secondary CSS page with the correct one, the certs.css instead of index.css. Realized that the CC cert pic has transparent background so I decided to take a screenshot of it so it has white background and replace it with that one so it is clearly visible on certs.html with the black background.

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -18,8 +18,8 @@
 
   body {
     /* Background & text color placeholders */
-    background-color: #03D8F3; /* Placeholder */
-    color: #000000; /* Placeholder */
+    background-color: black; /* Placeholder */
+    color: #f2f2f2; /* Placeholder */
     display: grid;
     grid-template-columns: repeat(12, 1fr);  /* 12 equal columns */
     /* This is what make the header, main, and footer able to display in 12 columns grids. */ 
@@ -146,8 +146,8 @@
   }
   
   .header {
-    background-color: beige;
-    color: black;
+    background-color: blue;
+    color: bisque;
   }
 
   .footer {
