--- a/assets/css/certs.css
+++ b/assets/css/certs.css
@@ -1,3 +1,13 @@
-.cert-social {
-    background: red;
+.header {
+    background-color: blue;
+    color: bisque;
+}
+
+body {
+    background-color: black;
+}
+
+body {
+    background-color: #0a0f1a; /* Dark background for Cyberlab */
+    color: #f2f2f2; /* Light text for contrast */
 }
